css/style.css
/* initialize ----------*/

body, html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

ul {
  margin: 0;
  padding: 0;
}

header, main, nav, aside, footer {
  width: 100%;
  box-sizing: border-box;
}

/* http://pheist.net/fonts.php?id=51 */
@font-face {
    font-family: 'Fipps';
    src: url('../fonts/Fipps-Regular.otf');
}

body {
  font-family: Fipps, Arial, Helvetica, sans-serif;
  text-align: center;
  background-color: #D1D1C7;
  line-height: 1.6;
  color: black;
  font-size: 1.2em;
  padding: 0 10px
}

.wrapper {
  margin: 0 auto;
  width: 510px;
  padding-top: 50px;
  text-align: left;
}

header {
  border-bottom: 2px solid black;
  padding-bottom: 15px;
}

.instructions {
  padding-top: 15px;
  font-size: 0.8em;
  text-align: center;
}

.status-bar {
  display: flex;
  flex-direction: row;
}

.status-bar .controls {
  margin-left: auto;
}

.button {
  background-color: #D1D1C7;
  font-family: Fipps, Arial, Helvetica, sans-serif;
  border: 3px solid #84C053;
  padding: 4px 15px;
  font-size: 0.8em;
  font-weight: bold;
  border: 3px solid black;
  cursor: pointer;
}

